--- a/data/monitoring_data/Community_data_processing.Rmd
+++ b/data/monitoring_data/Community_data_processing.Rmd
@@ -16,6 +16,7 @@ require(dplyr)
 require(stringr)
 require(tidyr)
 require(janitor)
+require(vegan)
 ```
 
 
@@ -447,13 +448,13 @@ kelp_upc_counts$mpa_defacto_designation <- tolower(kelp_upc_counts$mpa_defacto_d
 
 kelp_upc_counts <- kelp_upc_counts %>%
                     group_by(year, region3, region4, affiliated_mpa, mpa_defacto_class, mpa_defacto_designation,species) %>%
-                    dplyr::summarise(total_pct_cov = sum(pct_cov)) #make sure species are not duplicates by summarizing at the transect level (total counts)
+                    dplyr::summarise(mean_pct_cov = mean(pct_cov)) #take transect levels means
 
 
 
 #reshape to wide format
 kelp_upc_mpa_year_step1 <- kelp_upc_counts %>%
-                    pivot_wider(names_from=species, values_from=total_pct_cov) %>%
+                    pivot_wider(names_from=species, values_from=mean_pct_cov) %>%
                     janitor::clean_names()%>%
                     drop_na(region4) %>%
                     mutate(MHW = ifelse(year>=2014 & year<=2016, "during",ifelse(year<2014, "before","after")))%>%
@@ -471,16 +472,16 @@ kelp_upc_mpa_year <- left_join(kelp_upc_mpa_year_step1, envr_dat,
                   dplyr::select(1:7,80:98,8:79) %>%
                   dplyr::select(!c("mpa_class","mpa_designation")) %>%
                   dplyr::select(group, everything()) %>%
-                  mutate(group=recode(group,kelp="kelp_upc"))
-
-
+                  mutate(group=recode(group,kelp="kelp_upc")) %>%
+                  mutate_at(c(25:96), ~replace_na(.,0))
 
 #Export
-#path_aurora <- "/home/shares/ca-mpa/data/sync-data/processed_data/ecological_community_data/year_level" 
+#path_aurora <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars" 
 #write.csv(kelp_upc_mpa_year,file.path(path_aurora, "kelp_upc_mpa_year.csv"), row.names = FALSE)
 
 
 ```
+
 
 
 #process midwater/deep reef data
@@ -719,19 +720,6 @@ rocky_counts_raw <- rocky_counts_raw %>%
 #write.csv(rocky_counts_raw, file.path(path_aurora, "rocky_mpa_year.csv"), row.names = FALSE)
 
 ```
-
-
-
-
-
-
-
-#export
-```{r}
-
-
-```
-
 
 
 
