--- a/data/monitoring_data/Community_data_processing.Rmd
+++ b/data/monitoring_data/Community_data_processing.Rmd
@@ -109,8 +109,8 @@ CCFRP_mpa_year <- left_join(CCFRP_mpa_year_step1, envr_dat, by=c("year","group",
                   dplyr::select(1:8,102:117,9:101)
 
 #Export
-path_aurora <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars" 
-write.csv(CCFRP_mpa_year,file.path(path_aurora, "CCFRP_mpa_year.csv"), row.names = FALSE)
+#path_aurora <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars" 
+#write.csv(CCFRP_mpa_year,file.path(path_aurora, "CCFRP_mpa_year.csv"), row.names = FALSE)
 ```
 
 
@@ -712,12 +712,20 @@ rocky_counts_raw$mpa_designation <- tolower(rocky_counts_raw$mpa_designation)
 rocky_counts_raw$mpa_designation <- recode_factor(rocky_counts_raw$mpa_designation,"none"="ref")
 
 rocky_counts_raw <- rocky_counts_raw %>%
-                    filter(!(mpa_designation=='sc'))
+                    filter(!(mpa_designation=='sc')) %>%
+                     mutate(year = (as.factor(year)))
+
+rocky_counts_raw$site <- tolower(rocky_counts_raw$site) 
+
+rocky_count_envr <- left_join(rocky_counts_raw, rocky_envr_vars_cen, by=c("year","site"))%>%
+  mutate(group="rocky")%>%
+  select(year, group, region3, region4,site, mpa_designation, affiliated_mpa, 
+         mpa_designation,58:73, 8:56)
 
 
 #export
 #path_aurora <- "/home/shares/ca-mpa/data/sync-data/processed_data/ecological_community_data/year_level" 
-#write.csv(rocky_counts_raw, file.path(path_aurora, "rocky_mpa_year.csv"), row.names = FALSE)
+#write.csv(rocky_count_envr, file.path(path_aurora, "rocky_mpa_year.csv"), row.names = FALSE)
 
 ```
 
