--- a/data/monitoring_data/Community_data_processing.Rmd
+++ b/data/monitoring_data/Community_data_processing.Rmd
@@ -145,7 +145,8 @@ kelp_taxon <- read.csv(file.path(data_path, input_file)) %>%
 kelp_fish_counts<-  left_join(kelp_fish_counts, kelp_taxon, by="classcode")
 
 kelp_fish_counts <- kelp_fish_counts %>%
-                    dplyr::select(year, site, zone, level, transect, species=species_definition, total_count)
+                    dplyr::select(year, site, zone, level, transect, species=species_definition, total_count)%>%
+                    filter(!(species=='Sebastes atrovirens/carnatus/chrysomelas/caurinus'))
         
 
 #add affiliated_mpa
@@ -217,7 +218,7 @@ kelp_fish_counts <- kelp_fish_counts %>%
 
 
 kelp_fish_mpa_year_step1 <- kelp_fish_counts %>% 
-                  pivot_longer(cols=11:153, names_to="species",values_to="counts")%>%
+                  pivot_longer(cols=11:152, names_to="species",values_to="counts")%>%
                   group_by(year, region3, region4, affiliated_mpa, mpa_defacto_class, mpa_defacto_designation, MHW, species)%>%
                   dplyr::summarize(total_counts = sum(counts))%>%
                   ungroup()%>%
@@ -229,7 +230,7 @@ kelp_fish_mpa_year <- left_join(kelp_fish_mpa_year_step1, envr_dat, by=c("year",
                                                        "mpa_defacto_class",
                                                        "mpa_defacto_designation",
                                                        "affiliated_mpa"="mpa_name"))%>%
-                  dplyr::select(1:7,151:169,8:150) %>%
+                  dplyr::select(1:7,150:168,8:149) %>%
                   dplyr::select(!c("mpa_class","mpa_designation")) %>%
                   dplyr::select(group, everything()) %>%
                   mutate(group=recode(group,kelp="kelp_fish"))
