--- a/analyses/5community_climate_ecology/analyses/Step_0_data_transformations.Rmd
+++ b/analyses/5community_climate_ecology/analyses/Step_0_data_transformations.Rmd
@@ -380,13 +380,13 @@ rocky_distmat <-
 #data_path <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars"
 #save(CCFRP_envr_vars,kelp_invalg_envr_vars,kelp_fish_envr_vars,
 #     kelp_swath_envr_vars, kelp_upc_envr_vars,
-#  deep_reef_envr_vars,
+#  deep_reef_envr_vars, rocky_envr_vars,
 #    file = file.path(data_path, "envr_vars.rda"))
 
 #save distance matrices
 #data_path <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars"
 #save(CCFRP_distmat,kelp_invalg_distmat,kelp_fish_distmat,
-#     kelp_swath_distmat, kelp_upc_distmat,
+#    kelp_swath_distmat, kelp_upc_distmat,
 #     deep_reef_distmat,rocky_distmat,
 #    file = file.path(data_path, "distance_matrices_BC.rda"))
 ```
@@ -444,7 +444,7 @@ message("Done processing rocky_ord")
 #save(CCFRP_ord, kelp_invalg_ord, kelp_fish_ord, deep_reef_ord, rocky_ord, file = file.path(data_path, "bray_nmds_scores.rda"))
 
 #data_path <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars"
-#save(CCFRP_en, kelp_invalg_en, kelp_fish_en, deep_reef_en, rocky_ord, file = file.path(data_path, "env_fit_scores.rda"))
+#save(CCFRP_en, kelp_invalg_en, kelp_fish_en, deep_reef_en, rocky_en, file = file.path(data_path, "env_fit_scores.rda"))
 
 ```
 
