--- a/analyses/5community_climate_ecology/analyses/Step_2_NMDS.Rmd
+++ b/analyses/5community_climate_ecology/analyses/Step_2_NMDS.Rmd
@@ -394,27 +394,23 @@ print(rocky)
 ```
 
 #combine plots 
-
-#cowplot test
 ```{r}
-prow <- cowplot::plot_grid(
-  CCFRP + theme(legend.position="none"),
-  kelp_fish + theme(legend.position="none"),
-  deep_reef + theme(legend.position="none"),
-  kelp_invalg + theme(legend.position="none"),
-  rocky + theme(legend.position="none"))
-prow
 
-# extract the legend from one of the plots
+#create dummy legend as last panel
 legend <- get_legend(
   # create some space to the left of the legend
   CCFRP + theme(legend.box.margin = margin(0, 0, 0, 12))
 )
 
-# add the legend to the row we made earlier. Give it one-third of 
-# the width of one plot (via rel_widths).
-figure <- cowplot::plot_grid(prow, legend, rel_widths = c(3,1))
-print(figure)
+cplot <- cowplot::plot_grid(
+  CCFRP + theme(legend.position="none"),
+  kelp_fish + theme(legend.position="none"),
+  deep_reef + theme(legend.position="none"),
+  kelp_invalg + theme(legend.position="none"),
+  rocky + theme(legend.position="none"),
+  legend
+  )
+print(cplot)
 
 
 #cowplot::save_plot(here::here("analyses", "5community_climate_ecology", "figures", "community_structure_central2.png"), figure, bg="white",dpi = 600, units = "in")
@@ -424,480 +420,17 @@ print(figure)
 
 ```
 
-```{r}
-figure_test <- plot_grid(CCFRP, kelp_fish, deep_reef,
-          kelp_swath, kelp_upc, rocky)
 
-figure<-ggarrange(CCFRP, kelp_fish, deep_reef,
-          kelp_swath, kelp_upc, rocky, common.legend = TRUE, legend="right",
-          font.label=list(color="black",size=4)) + bgcolor('white')  
-          #+coord_fixed(ratio=0.5)
 
-#annotate_figure(figure,
-#                top = text_grob("central CA community structure", color = "black", face = "bold", size = 8)
-#)
 
-print(figure)
-
-#ggsave(here::here("analyses", "5community_climate_ecology", "figures", "community_structure_central.png"), figure, height=8, width=15, bg="white", dpi = 600, units = "in")
-```
-
-
-
-```{r}
-#TEST CODE ORDIELLIPSE
-
-CCFRP_process <- CCFRP_counts %>%
-                  rowwise() %>%
-                  dplyr::mutate(sum = sum(across(9:ncol(.)), na.rm = T)) %>%
-                  filter(!(sum==0))%>%
-                  dplyr::select(-sum)%>%
-                  mutate(desig_state = paste(mpa_designation,MHW))%>%
-                  dplyr::select(desig_state, everything())#remove rows containing only zeros
-                  
-
-#define grouping vars
-CCFRP_group_vars <- CCFRP_process %>%
-                    dplyr::select(1:9)
-
-#define data for ordination
-CCFRP_ord_data <- CCFRP_process %>%
-              dplyr::select(10:ncol(.))
-
-
-#calculate relative abundance
-CCFRP_rel <- decostand(CCFRP_ord_data, method = "hellinger") %>%
-            dplyr::select(where(~any(. !=0)))
-
-#generate a BC dissim matrix
-CCFRP_distmat <- vegdist(CCFRP_rel, method = "bray", na.rm=T) 
-
-
-
-
-PCO <- capscale(CCFRP_distmat ~1)
-
-plot(PCO, display="sites", type="n")
-plot.window(xlim=c(-1,1), ylim=c(-1,1))
-
-stats <- with(CCFRP_group_vars,
-              ordiellipse(PCO,CCFRP_group_vars$desig_state,kind="se",conf=0.95, label=T,
-                          col=c("red","blue","red","blue","red","blue")))
-
-scrs<- scores(PCO, display="sites")
-cent_MHW <- aggregate(scrs ~ desig_state, data=CCFRP_group_vars, FUN=mean)
-names(cent_MHW)[-1] <- colnames(scrs)
-
-
-
-
-
-points(cent_MHW[, -1], pch = 22, col='dark red', bg = c("red","blue","green"), cex = 1.1)
-
-cent_year <- aggregate(scrs ~ year, data=CCFRP_group_vars, FUN=mean)
-names(cent_year)[-1] <- colnames(scrs)
-
-points(cent_year[, -1], pch = 22, col='blue', bg = c("red","blue","green"), cex = 1.1)
-
-
-
-
-
-
-#https://stats.stackexchange.com/questions/34017/confidence-intervals-around-a-centroid-with-modified-gower-similarity
-
-```
-  
-
-
-
-
-
-**Part 1.2 -- Calculate Centroid Distance**
-#CCFRP_centroid distance
-```{r}
-
-CCFRP_process <- CCFRP_counts %>%
-                  rowwise() %>%
-                  dplyr::mutate(sum = sum(across(9:ncol(.)), na.rm = T)) %>%
-                  filter(!(sum==0))%>%
-                  dplyr::select(-sum) #remove rows containing only zeros
-
-#define grouping vars
-CCFRP_group_vars_smr <- CCFRP_process %>%
-                    filter(mpa_designation=='smr')%>%
-                    dplyr::select(1:8)
-
-CCFRP_group_vars_ref <- CCFRP_process %>%
-                    filter(mpa_designation=='ref')%>%
-                    dplyr::select(1:8)
-
-#define data for ordination
-CCFRP_ord_smr <- CCFRP_process %>%
-              filter(mpa_designation=='smr')%>%
-              dplyr::select(9:ncol(.))
-
-CCFRP_ord_ref <- CCFRP_process %>%
-              filter(mpa_designation=='ref')%>%
-              dplyr::select(9:ncol(.))
-
-#calculate relative abundance
-CCFRP_rel_smr <- decostand(CCFRP_ord_smr, method = "hellinger") %>%
-            dplyr::select(where(~any(. !=0)))
-
-CCFRP_rel_ref <- decostand(CCFRP_ord_ref, method = "hellinger") %>%
-            dplyr::select(where(~any(. !=0)))
-
-
-#generate a BC dissim matrix
-CCFRP_distmat_smr <- vegdist(CCFRP_rel_smr, method = "bray", na.rm=T) 
-CCFRP_distmat_ref <- vegdist(CCFRP_rel_ref, method = "bray", na.rm=T) 
-
-
-(CCFRP_smr_before_after<- cbind("CCFRP",dist_between_centroids(CCFRP_distmat_smr, 1:27,39:54),"smr"))
-(CCFRP_ref_before_after<- cbind("CCFRP",dist_between_centroids(CCFRP_distmat_ref, 1:27,39:54),"ref"))
-
-(dist_traveled <- rbind(CCFRP_smr_before_after,CCFRP_ref_before_after))
-
-```
-
-
-#Kelp swath_centroid distance
-```{r}
-
-kelp_swath <- kelp_swath %>%
-                  dplyr::rowwise() %>%
-                  dplyr::mutate(sum = sum(across(9:ncol(.)), na.rm = T)) %>%
-                  filter(!(sum==0))%>%
-                  dplyr::select(-sum) #remove rows containing only zeros
-
-#define grouping vars
-kelp_swath_group_vars_smr <- kelp_swath %>%
-                    filter(mpa_defacto_designation=='smr')%>%
-                    dplyr::select(1:8)
-
-kelp_group_vars_ref <- kelp_swath %>%
-                    filter(mpa_defacto_designation=='ref')%>%
-                    dplyr::select(1:8)
-
-#define data for ordination
-kelp_ord_smr <- kelp_swath %>%
-              filter(mpa_defacto_designation=='smr')%>%
-              dplyr::select(9:ncol(.))
-
-kelp_ord_ref <- kelp_swath %>%
-              filter(mpa_defacto_designation=='ref')%>%
-              dplyr::select(9:ncol(.))
-
-#calculate relative abundance
-kelp_rel_smr <- decostand(kelp_ord_smr, method = "hellinger") %>%
-            dplyr::select(where(~any(. !=0)))
-
-kelp_rel_ref <- decostand(kelp_ord_ref, method = "hellinger") %>%
-            dplyr::select(where(~any(. !=0)))
-
-
-#generate a BC dissim matrix
-kelp_distmat_smr <- vegdist(kelp_rel_smr, method = "bray", na.rm=T) 
-kelp_distmat_ref <- vegdist(kelp_rel_ref, method = "bray", na.rm=T) 
-
-
-(kelp_smr_before_after<- cbind("kelp_swath",dist_between_centroids(kelp_distmat_smr, 1:101,110:124),"smr"))
-(kelp_ref_before_after<- cbind("kelp_swath",dist_between_centroids(kelp_distmat_ref, 1:109,121:139),"ref"))
-
-(dist_traveled <- rbind(dist_traveled,kelp_smr_before_after,kelp_ref_before_after))
-
-
-```
-
-
-Kelp upc_centroid distance
-```{r}
-
-kelp_upc <- kelp_upc_counts %>%
-                  rowwise() %>%
-                  dplyr::mutate(sum = sum(across(8:ncol(.), na.rm = T))) %>%
-                  replace(is.na(.), 0)
-                  
-
-#define grouping vars
-kelp_upc_vars_smr <- kelp_upc%>%
-                    filter(mpa_defacto_designation=='smr')%>%
-                    dplyr::select(1:7)
-kelp_upc_vars_ref <- kelp_upc%>%
-                    filter(mpa_defacto_designation=='ref')%>%
-                    dplyr::select(1:7)
-
-#define data for ordination
-kelp_upc_ord_smr <- kelp_upc%>%
-              filter(mpa_defacto_designation=='smr')%>%
-              ungroup()%>%
-              dplyr::select(8:ncol(.))
-
-kelp_upc_ord_ref <- kelp_upc%>%
-              filter(mpa_defacto_designation=='ref')%>%
-              ungroup()%>%
-              dplyr::select(8:ncol(.))
-
-#calculate relative abundance
-kelp_upc_rel_smr <- decostand(kelp_upc_ord_smr, method = "hellinger")
-kelp_upc_rel_ref <- decostand(kelp_upc_ord_ref, method = "hellinger")
-
-#generate a BC dissim matrix
-kelp_upc_distmat_smr <- 
-    vegdist(kelp_upc_rel_smr, method = "bray", na.rm=T) #generates a BC dissim matrix
-
-kelp_upc_distmat_ref <- 
-    vegdist(kelp_upc_rel_ref, method = "bray", na.rm=T)
-
-
-
-(kelp_upc_smr_before_after<- cbind("kelp_upc",dist_between_centroids(kelp_upc_distmat_smr, 1:101,111:125),"smr"))
-(kelp_upc_ref_before_after<- cbind("kelp_upc",dist_between_centroids(kelp_upc_distmat_ref, 1:109,121:139),"ref"))
-
-(dist_traveled <- rbind(dist_traveled,kelp_upc_smr_before_after,kelp_upc_ref_before_after))
-
-
-```
-
-
-#kelp fish centroid distance
-```{r}
-
-kelp_fish <- kelp_fish_counts %>%
-                  rowwise() %>%
-                  dplyr::mutate(sum = sum(across(8:ncol(.), na.rm = T)))%>%
-                  filter(!(sum==0))%>% #remove rows containing only zeros
-                  dplyr::select(-sum, MHW, everything()) #drop sum columns and non-species categories
-
-#define grouping vars
-kelp_fish_vars_smr <- kelp_fish %>%
-                    filter(mpa_defacto_designation=='smr')%>%
-                    dplyr::select(1:7)
-
-kelp_fish_vars_ref <- kelp_fish %>%
-                    filter(mpa_defacto_designation=='ref')%>%
-                    dplyr::select(1:7)
-
-#define data for ordination
-kelp_fish_ord_smr <- kelp_fish %>%
-              filter(mpa_defacto_designation=='smr')%>%
-              ungroup() %>%
-              dplyr::select(8:ncol(.))
-
-kelp_fish_ord_ref <- kelp_fish %>%
-              filter(mpa_defacto_designation=='ref')%>%
-              ungroup() %>%
-              dplyr::select(8:ncol(.))
-
-
-#calculate relative abundance
-kelp_fish_rel_smr <- decostand(kelp_fish_ord_smr, method = "hellinger")
-kelp_fish_rel_ref <- decostand(kelp_fish_ord_ref, method = "hellinger")
-
-
-#generate a BC dissim matrix
-kelp_fish_distmat_smr <- 
-    vegdist(kelp_fish_rel_smr, method = "bray", na.rm=T) #generates a BC dissim matrix
-kelp_fish_distmat_ref <- 
-    vegdist(kelp_fish_rel_ref, method = "bray", na.rm=T) 
-
-
-(kelp_fish_distmat_smr<- cbind("kelp_fish",dist_between_centroids(kelp_fish_distmat_smr, 1:100,110:124),"smr"))
-(kelp_fish_distmat_ref <- cbind("kelp_fish",dist_between_centroids(kelp_upc_distmat_ref, 1:106,118:137),"ref"))
-
-(dist_traveled <- rbind(dist_traveled,kelp_fish_distmat_smr,kelp_fish_distmat_ref))
-
-```
-
-#Deep reef centroid
-```{r}
-#deep reef processing---------------------------------------------------------
-
-deep_reef <- deep_reef_counts %>%
-                  rowwise() %>%
-                  dplyr::mutate(sum = sum(across(8:ncol(.), na.rm = T))) %>%
-                  filter(!(sum==0))%>% #remove rows containing only zeros
-                  dplyr::select(-c(sum, schooling_10_15_cm_sebastes_sp,
-                                schooling_10_15_cm_sebastes_sp,
-                                young_of_year_10_cm_sebastes_sp,
-                                synodus_lucioceps_or_ophiodon_elongatus,
-                                sebastes_melanops_or_mystinus_or_diaconus)) #drop sum columns and non-species categories
-
-#define grouping vars
-deep_reef_vars_smr <- deep_reef%>%
-                    filter(mpa_defacto_designation=='smr')%>%
-                    dplyr::select(1:7)
-
-deep_reef_vars_ref <- deep_reef%>%
-                    filter(mpa_defacto_designation=='ref')%>%
-                    dplyr::select(1:7)
-
-#define data for ordination
-deep_reef_ord_smr <- deep_reef%>%
-              filter(mpa_defacto_designation=='smr')%>%
-              ungroup()%>%
-              dplyr::select(8:ncol(.))
-
-deep_reef_ord_ref <- deep_reef%>%
-              filter(mpa_defacto_designation=='ref')%>%
-              ungroup()%>%
-              dplyr::select(8:ncol(.))
-
-#calculate relative abundance
-deep_reef_rel_smr <- decostand(deep_reef_ord_smr, method="hellinger")
-deep_reef_rel_ref <- decostand(deep_reef_ord_ref, method="hellinger")
-
-#generate a BC dissim mat
-deep_reef_distmat_smr <- 
-    vegdist(deep_reef_rel_smr, method = "bray", na.rm=T) #generates a BC dissim matrix
-deep_reef_distmat_ref <- 
-    vegdist(deep_reef_rel_ref, method = "bray", na.rm=T) #generates a BC dissim matrix
-
-
-
-(deep_reef_smr_before_after<- cbind("deep_reef",dist_between_centroids(deep_reef_distmat_smr, 1:15,16:22),"smr"))
-(deep_reef_ref_before_after<- cbind("deep_reef",dist_between_centroids(deep_reef_distmat_ref, 1:7,16:25),"ref"))
-
-(dist_traveled <- rbind(dist_traveled,deep_reef_smr_before_after,deep_reef_ref_before_after))
-
-```
-
-
-
-
-#intertidal 
-```{r}
-
-rocky_counts <- rocky_counts %>%
-                mutate(MHW = ifelse(year>=2014 & year<=2016, "during",ifelse(year<2014, "before","after")))%>%
-                dplyr::select(MHW, everything())%>%
-                arrange(MHW)
-                
-                
-
-#define grouping vars
-rocky_group_vars_smr <- rocky_counts%>%
-                    filter(mpa_designation=='smr')%>%
-                    dplyr::select(1:9)
-
-rocky_group_vars_ref <- rocky_counts%>%
-                    filter(mpa_designation=='ref')%>%
-                    dplyr::select(1:9)
-
-#define data for ordination
-rocky_ord_smr <- rocky_counts %>%
-              filter(mpa_designation=='smr')%>%
-              ungroup() %>%
-              dplyr::select(10:ncol(.))
-
-rocky_ord_ref <- rocky_counts %>%
-              filter(mpa_designation=='ref')%>%
-              ungroup() %>%
-              dplyr::select(10:ncol(.))
-
-
-#calculate relative abundance
-rocky_rel_smr <- decostand(rocky_ord_smr, method = "hellinger")
-rocky_rel_ref <- decostand(rocky_ord_ref, method = "hellinger")
-
-#generate a BC dissim matrix
-rocky_distmat_smr <- 
-    vegdist(rocky_rel_smr, method = "bray", na.rm=T) #generates a BC dissim matrix
-
-rocky_distmat_ref <- 
-    vegdist(rocky_rel_ref, method = "bray", na.rm=T) 
-
-
-
-(rocky_smr_before_after<- cbind("rocky", dist_between_centroids(rocky_distmat_smr, 1:21,22:101),"smr"))
-(rocky_ref_before_after<- cbind("rocky", dist_between_centroids(rocky_distmat_ref, 1:33,34:144),"ref"))
-
-(dist_traveled <- rbind(dist_traveled,rocky_smr_before_after,rocky_ref_before_after))
-
-
-```
-
-#create DF and plot
-```{r}
-dist_df = as.data.frame(dist_traveled)
-colnames(dist_df)= c("group","distance","MPA") 
-
-dist_df$community_type = c("fish","fish","inverts_algae","inverts_algae","inverts_algae","inverts_algae","fish","fish","fish","fish","inverts_algae","inverts_algae")
-
-
-dist_df$group <- factor(dist_df$group, levels=c("kelp_swath","deep_reef","kelp_upc","kelp_fish","CCFRP","rocky"))
-dist_df$MPA <- factor(dist_df$MPA, levels=c("ref","smr"))
-
-
-A<- dist_df %>%
-ggplot(aes(x=group, y=as.numeric(distance), fill=MPA))+
-  geom_bar(stat='identity', color='black', position=position_dodge())+
-  scale_fill_manual(values=c('#95B4CC','#ff392e'))+
-  scale_y_continuous(labels=label_number(accuracy=0.01), 
-                     breaks = seq(0,0.45,len=10))+
-  coord_flip()+
-  labs(
-    title = "Distance traveled before/after MHW",
-    x = "monitoring group",
-    y = "distance (Euclidean)"
-  )+
-  #theme(legend.text = element_text(size=16))+
-  theme_minimal(base_size=20)
-
-
-
-dist_df_wide <- dist_df%>%
-                pivot_wider(names_from = MPA, values_from='distance')%>%
-                mutate(logRR = log10((as.numeric(smr)/as.numeric(ref))),
-                       difference = as.numeric(smr)-as.numeric(ref),
-                       group = reorder(group, logRR))
-                
-    
-
-
-B <- dist_df_wide %>%
-ggplot()+
-  geom_bar(mapping = aes(x=group, y=logRR, fill=community_type), stat='identity', color='black', position=position_dodge())+
-  #scale_fill_manual(values=c('#95B4CC','#ff392e'))+
-  #scale_y_continuous(labels=label_number(accuracy=0.01), 
-  #                   breaks = seq(0,0.45,len=10))+
-  #xlim(-0.2,0.10)+
-  scale_y_continuous(limits=c(-0.20,0.10))+
-  coord_flip()+
-  scale_fill_brewer(palette = "Set2")+
-  labs(
-    title = "Distance traveled response ratio of distance traveled",
-    x = "monitoring group",
-    y = "response ratio (log(smr/ref))"
-  )+
-  theme_minimal(base_size=20)
-
-
-ggarrange(A,B,
-          labels="AUTO",
-          font.label = list(size=16))
-
-
-```
-
-
-
-
-
-
-
-
-
-
-**PART 1.3 COMMUNITY TRAJECTORY OVER TIME**
+**PART 1.2 COMMUNITY TRAJECTORY OVER TIME**
 
 
 #CCFRP scores and plot
 ```{r}
 
 
-scrs <- scores(CCFRP_ord)
+scrs <- as.data.frame(scores(CCFRP_ord, display="site"))
 
 scrs <- cbind(as.data.frame(scrs), desig_state=CCFRP_group_vars$desig_state, year=CCFRP_group_vars$year, MHW=CCFRP_group_vars$MHW, region4=CCFRP_group_vars$region4, mpa_designation=CCFRP_group_vars$mpa_designation) #to facilitate computing centroids, add group var
 
@@ -934,9 +467,9 @@ CCFRP_trajectory
 #kelp_swath scores and plot
 ```{r}
 
-scrs <- scores(kelp_swath_ord)
+scrs<- as.data.frame(scores(kelp_invalg_ord, display="site"))
 
-scrs <- cbind(as.data.frame(scrs), desig_state= kelp_swath_group_vars$desig_state, year=kelp_swath_group_vars$year, MHW=kelp_swath_group_vars$MHW, region4=kelp_swath_group_vars$region4, mpa_designation=kelp_swath_group_vars$mpa_defacto_designation) #to facilitate computing centroids, add group var
+scrs <- cbind(as.data.frame(scrs), desig_state= kelp_invalg_group_vars$desig_state, year=kelp_invalg_group_vars$year, MHW=kelp_invalg_group_vars$MHW, region4=kelp_invalg_group_vars$region4, mpa_designation=kelp_invalg_group_vars$mpa_defacto_designation) #to facilitate computing centroids, add group var
 
 scrs$region4 <- factor(scrs$region4, level = c("north","central","north islands","south")) #set order
 scrs$MHW <- factor(scrs$MHW, level = c("before","during","after")) #set order
@@ -945,7 +478,7 @@ scrs$mpa_designation <- factor(scrs$mpa_designation, level = c("smr","ref")) #se
 
 cent <- aggregate(cbind(NMDS1, NMDS2) ~ year+MHW+region4+mpa_designation, data = scrs, FUN = mean) #computes centroids by MHW and region
 
-kelp_swath_trajectory<- ggplot(data=cent, aes(NMDS1, NMDS2, label=year)) +
+kelp_invalg_trajectory<- ggplot(data=cent, aes(NMDS1, NMDS2, label=year)) +
   #geom_segment(data = segs,
                #mapping = aes(xend = oNMDS1, yend = oNMDS2)) + #spiders
   geom_point(aes(shape=MHW, color=mpa_designation), size=4) +                           #centroids
@@ -960,43 +493,7 @@ kelp_swath_trajectory<- ggplot(data=cent, aes(NMDS1, NMDS2, label=year)) +
   #geom_text(position=position_jitter(width=0.01, height=0.05))
 
 
-kelp_swath_trajectory
-
-
-```
-
-
-
-#kelp_upc scores and plot
-```{r}
-
-scrs <- scores(kelp_upc_ord)
-
-scrs <- cbind(as.data.frame(scrs), desig_state= kelp_upc_group_vars$desig_state, year=kelp_upc_group_vars$year, MHW=kelp_upc_group_vars$MHW, region4=kelp_upc_group_vars$region4, mpa_designation=kelp_upc_group_vars$mpa_defacto_designation) #to facilitate computing centroids, add group var
-
-scrs$region4 <- factor(scrs$region4, level = c("north","central","north islands","south")) #set order
-scrs$MHW <- factor(scrs$MHW, level = c("before","during","after")) #set order
-scrs$mpa_designation <- factor(scrs$mpa_designation, level = c("smr","ref")) #set order
-
-
-cent <- aggregate(cbind(NMDS1, NMDS2) ~ year+MHW+region4+mpa_designation, data = scrs, FUN = mean) #computes centroids by MHW and region
-
-kelp_upc_trajectory<- ggplot(data=cent, aes(NMDS1, NMDS2, label=year)) +
-  #geom_segment(data = segs,
-               #mapping = aes(xend = oNMDS1, yend = oNMDS2)) + #spiders
-  geom_point(aes(shape=MHW, color=mpa_designation), size=4) +                           #centroids
-  geom_path(data=cent, aes(NMDS1, NMDS2, group=mpa_designation, color=mpa_designation), size = 0.5, linetype=1 #aes(color=year)
-            )+           #line connecting groups (years)
- 
-  ggtitle("kelp UPC")+
-  scale_color_manual(values=c('#EB6977','#13A0DD'))+
-  theme(strip.text = element_text(size=18, face="bold"))+
-  theme(plot.title = element_text(size=16, face="bold"))+
-  theme(text = element_text(20))
-  #geom_text(position=position_jitter(width=0.01, height=0.05))
-
-
-kelp_upc_trajectory
+kelp_invalg_trajectory
 
 
 ```
@@ -1005,7 +502,7 @@ kelp_upc_trajectory
 #kelp_fish scores and plot
 ```{r}
 
-scrs <- scores(kelp_fish_ord)
+scrs<- as.data.frame(scores(kelp_fish_ord, display="site"))
 
 scrs <- cbind(as.data.frame(scrs), desig_state= kelp_fish_group_vars$desig_state, year=kelp_fish_group_vars$year, MHW=kelp_fish_group_vars$MHW, region4=kelp_fish_group_vars$region4, mpa_designation=kelp_fish_group_vars$mpa_defacto_designation) #to facilitate computing centroids, add group var
 
@@ -1041,7 +538,7 @@ kelp_fish_trajectory
 #deep_reef scores and plot
 ```{r}
 
-scrs <- scores(deep_reef_ord)
+scrs <- as.data.frame(scores(deep_reef_ord, display="site"))
 
 scrs <- cbind(as.data.frame(scrs), desig_state= deep_reef_group_vars$desig_state, year=deep_reef_group_vars$year, MHW=deep_reef_group_vars$MHW, region4=deep_reef_group_vars$region4, mpa_designation=deep_reef_group_vars$mpa_defacto_designation) #to facilitate computing centroids, add group var
 
@@ -1076,7 +573,7 @@ deep_reef_trajectory
 #rocky scores and plot
 ```{r}
 
-scrs <- scores(rocky_ord)
+scrs <- as.data.frame(scores(rocky_ord, display="site"))
 
 scrs <- cbind(as.data.frame(scrs), desig_state= rocky_group_vars$desig_state, year=rocky_group_vars$year, MHW=rocky_group_vars$MHW, region4=rocky_group_vars$region4, mpa_designation=rocky_group_vars$mpa_designation) #to facilitate computing centroids, add group var
 
@@ -1112,14 +609,14 @@ rocky_trajectory
 ```{r}
 require('ggpubr')
 figure<-ggarrange(CCFRP_trajectory, kelp_fish_trajectory, deep_reef_trajectory,
-          kelp_swath_trajectory, kelp_upc_trajectory, rocky_trajectory, common.legend = TRUE, legend="right",
+          kelp_invalg_trajectory, rocky_trajectory, common.legend = TRUE, legend="right",
           font.label=list(size=40)) + bgcolor('white')
 annotate_figure(figure,
                 top = text_grob("central CA community structure", color = "black", face = "bold", size = 20)
 )
 
 #Export figure
-ggsave(here("analyses", "5community_climate_ecology", "figures", "community_trajectory.png"), figure, height=8, width = 12, units = "in", dpi = 300)
+#ggsave(here("analyses", "5community_climate_ecology", "figures", "community_trajectory.png"), figure, height=8, width = 12, units = "in", dpi = 300)
 
 
 #png("/home/joshsmith/CA_MPA_Project/ca-mpa/analyses/5community_climate_ecology/figures/community_trajectory.png")
