--- a/analyses/5community_climate_ecology/analyses/Step_0_data_transformations.Rmd
+++ b/analyses/5community_climate_ecology/analyses/Step_0_data_transformations.Rmd
@@ -108,7 +108,8 @@ kelp_check <-  anti_join(kelp_swath_stan1, kelp_upc_stan2, by=c("year",
 
 #drop higher order taxa that might include duplicates
 kelp_stan <- kelp_stan %>% 
-             select(!(c('anthopleura',
+             select(!(c('apostichopus',
+                        'anthopleura',
                         'asteroidea',
                         'haliotis',
                         'laminaria',
@@ -389,7 +390,7 @@ rocky_distmat <-
 
 
 #save group vars
-data_path <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars"
+#data_path <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/ecological_community_data/year_level_with_envr_vars"
 #save(CCFRP_group_vars,kelp_invalg_group_vars,kelp_fish_group_vars,
 #     kelp_swath_group_vars, kelp_upc_group_vars,
 #   deep_reef_group_vars,rocky_group_vars,
